# devalot-pandoc

./: .gitignore  GNUmakefile  LICENSE  LICENSE.md  README.md  TODO.org  devalot-pandoc.cabal  devalot-pandoc.hs
src/Text/: Devalot.hs
src/Text/Devalot/: FileList.hs  FileStitch.hs  SpecialComments.hs
src/Text/Pandoc/: Devalot.hs
src/Text/Pandoc/Devalot/: Code.hs  Counter.hs  Exec.hs
test/: FileListTest.hs  file-list.txt  hlint.hs  tests.hs
