name:          devalot-pandoc
version:       0.4.0.0
synopsis:      Pandoc extensions for Devalot.com
license:       BSD3
license-file:  LICENSE.md
author:        Peter Jones <pjones@devalot.com>
maintainer:    Peter Jones <pjones@devalot.com>
copyright:     Copyright (c) 2013 Peter Jones
category:      Text
build-type:    Simple
cabal-version: >= 1.8
-- description:         

------------------------------------------------------------------------------
extra-source-files:
  README.md
  LICENSE.md

------------------------------------------------------------------------------
flag maintainer
  description: Enable settings for the package maintainer.
  default: False

------------------------------------------------------------------------------
-- You can disable the hlint test suite with -f-test-hlint
flag test-hlint
  default: True
  manual: True

------------------------------------------------------------------------------
library
  exposed-modules: 
    Text.Devalot
    Text.Devalot.FileList
    Text.Devalot.FileStitch
    Text.Devalot.SpecialComments
    Text.Pandoc.Devalot
    Text.Pandoc.Devalot.Code
    Text.Pandoc.Devalot.Counter
    Text.Pandoc.Devalot.Exec

  hs-source-dirs: src
  ghc-options: -Wall

  if flag(maintainer)
    ghc-options: -Werror

  extensions:
    OverloadedStrings
    DeriveDataTypeable

  build-depends: base         >= 4.5    && < 5.0
               , containers   >= 0.5    && < 0.6
               , filepath     >= 1.3.0  && < 1.4
               , pandoc       >= 1.12.1 && < 1.12.3
               , pandoc-types >= 1.12.3 && < 1.13
               , parsec       >= 3.1.4  && < 3.2
               , process      >= 1.1    && < 1.2
               , text         >= 0.11   && < 0.12

------------------------------------------------------------------------------
executable devalot-pandoc
  main-is: devalot-pandoc.hs
  ghc-options: -Wall

  if flag(maintainer)
    ghc-options: -Werror

  build-depends: base
               , devalot-pandoc
               , optparse-applicative >= 0.7.0.2 && < 0.8
               , pandoc-types
               , text

------------------------------------------------------------------------------
test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: tests.hs
  ghc-options: -Wall -Werror
  extensions: OverloadedStrings
  build-depends: base
               , devalot-pandoc
               , hspec       >= 1.8.1.1 && < 1.9
               , tasty       >= 0.7     && < 0.8
               , tasty-hspec >= 0.1     && < 0.2
               , text

------------------------------------------------------------------------------
test-suite hlint
  type: exitcode-stdio-1.0
  main-is: hlint.hs
  ghc-options: -w
  hs-source-dirs: test

  if !flag(test-hlint)
    buildable: False
  else
    build-depends:
      base,
      hlint >= 1.7

